--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "ai_advisor_backend",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts",
+    "migrate": "node --loader ts-node/esm src/migrations/001_init.ts",
+   "vector:test": "tsx src/vector/test_vector.ts",
+    "vector:setup": "tsx src/vector/setup_index.ts",
+    "ingest": "tsx src/ingestion.ts",
+    "db:psql": "docker exec -it ai_advisor_pg psql -U postgres -d ai_advisor",
+     "agents:test": "tsx src/agents/test_run.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Backend server for AI Advisor React Native app",
+  "type": "module",
+  "description": "",
   "dependencies": {
+    "@langchain/langgraph": "^0.4.9",
+    "@langchain/openai": "^0.6.11",
+    "@pinecone-database/pinecone": "^6.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "ws": "^8.18.3"
+    "pg": "^8.16.3",
+    "pino": "^9.9.1",
+    "pino-pretty": "^13.1.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
-    "@types/ws": "^8.18.1",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
+    "@types/pg": "^8.15.5",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
